--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         margin-bottom: 1.5dvh;
     }
 
-    @media (min-width: 767px){
+    @media (max-width: 767px){
       * {
         margin: 0;
         padding: 0;
